correction contraste

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ article h2{
 }
 
 .prix{
-    color: gray;
+    color: #757575;
 }
 
 .photodim{
